--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             <button>Search</button>
         </div>
         <div class="user-options">
-            <a href="#">Login</a>
-            <a href="#">Sign Up</a>
+            <a href="./login.html">Login</a>
+            <a href="./signup.html">Sign Up</a>
         </div>
     </header>
 
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Scholarships</a></li>
+            <li><a href="./scholarship.html">Scholarships</a></li>
             <li><a href="#">Explore</a></li>
             <li><a href="#">FAQs</a></li>
             <li><a href="#">Blog</a></li>
