--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a href="#">Explore</a></li>
             <li><a href="#">FAQs</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 
